# rust-qr-data-exchange

./: .gitignore  Cargo.toml  README.md
src/: main.rs  services.rs
src/crypto/: mod.rs
src/qr/: mod.rs  processor.rs  service.rs
